@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190405"
-#define public MagickPackageReleaseDate "snapshot-20190405"
+#define public MagickPackageVersionAddendum ".020190407"
+#define public MagickPackageReleaseDate "snapshot-20190407"
