@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2019-04-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/xwd.c (ReadXWDImage): Perform more header validations and
+a file size validation in order to reject files with bogus
+headers.
+(WriteXWDImage): Fix SourceForge issue #599
+&quot;heap_buffer_overflow_WRITE in function WriteXWDImage of
+coders/xwd.c&quot;.</li>
+</ul>
+</blockquote>
 <p>2019-04-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
